--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           
           <a href="#" class="icon icon-home">
             wf-psf
+              <img src="_static/cosmostat_logo.png" class="logo" alt="Logo"/>
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
