--- a/_modules/wf_psf/utils/io.html
+++ b/_modules/wf_psf/utils/io.html
@@ -265,7 +265,7 @@
 
 <div class="viewcode-block" id="FileIOHandler.get_config_dir">
 <a class="viewcode-back" href="../../../wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_config_dir">[docs]</a>
-    <span class="k">def</span> <span class="nf">get_config_dir</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">get_config_dir</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">run_output_dir</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Get Config Directory.</span>
 
 <span class="sd">        A function that returns path</span>
@@ -274,11 +274,11 @@
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
 <span class="sd">        str</span>
-<span class="sd">            Absolute path to checkpoint directory</span>
+<span class="sd">            Absolute path to config directory</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_run_output_dir</span><span class="p">,</span>
+            <span class="n">run_output_dir</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_config</span><span class="p">,</span>
         <span class="p">)</span></div>
 
@@ -300,7 +300,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="n">source</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">config_path</span><span class="p">,</span> <span class="n">source_file</span><span class="p">)</span>
-        <span class="n">destination</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">get_config_dir</span><span class="p">(),</span> <span class="n">source_file</span><span class="p">)</span>
+        <span class="n">destination</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">get_config_dir</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_run_output_dir</span><span class="p">),</span> <span class="n">source_file</span><span class="p">)</span>
 
         <span class="n">shutil</span><span class="o">.</span><span class="n">copy</span><span class="p">(</span><span class="n">source</span><span class="p">,</span> <span class="n">destination</span><span class="p">)</span></div>
 
