deploy: 90000c936adf6b11276c1cefab2dcefc9b518e3a

--- a/genindex.html
+++ b/genindex.html
@@ -219,10 +219,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.call_plot_config_handler_run">call_plot_config_handler_run() (wf_psf.utils.configs_handler.MetricsConfigHandler method)</a>
-</li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler.check_and_update_metrics_confs">check_and_update_metrics_confs() (wf_psf.utils.configs_handler.PlottingConfigHandler method)</a>
-</li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.check_wfe_rms">check_wfe_rms() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
 </li>
       <li><a href="wf_psf.metrics.metrics.html#wf_psf.metrics.metrics.compute_metrics">compute_metrics() (in module wf_psf.metrics.metrics)</a>
@@ -265,8 +261,6 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.DataConfigHandler">DataConfigHandler (class in wf_psf.utils.configs_handler)</a>
-</li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.decimate_im">decimate_im() (in module wf_psf.utils.utils)</a>
 
       <ul>
@@ -275,8 +269,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.define_plot_style">define_plot_style() (in module wf_psf.plotting.plots_interface)</a>
-</li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.diffract_phase">diffract_phase() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
 </li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.downsample_im">downsample_im() (in module wf_psf.utils.utils)</a>
@@ -375,11 +367,7 @@
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.get_gpu_info">get_gpu_info() (in module wf_psf.training.train)</a>
 </li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MetricsPlotHandler.get_metrics">get_metrics() (wf_psf.plotting.plots_interface.MetricsPlotHandler method)</a>
-</li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_metrics_dir">get_metrics_dir() (wf_psf.utils.io.FileIOHandler method)</a>
-</li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.get_number_of_stars">get_number_of_stars() (in module wf_psf.plotting.plots_interface)</a>
 </li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_optimizer_dir">get_optimizer_dir() (wf_psf.utils.io.FileIOHandler method)</a>
 </li>
@@ -393,11 +381,7 @@
 </li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_psf_model_dir">get_psf_model_dir() (wf_psf.utils.io.FileIOHandler method)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.get_psf_model_weights_filepath">get_psf_model_weights_filepath() (wf_psf.utils.configs_handler.MetricsConfigHandler method)</a>
-</li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.get_radial_idx">get_radial_idx() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit static method)</a>
-</li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.get_run_config">get_run_config() (in module wf_psf.utils.configs_handler)</a>
 </li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_timestamp">get_timestamp() (wf_psf.utils.io.FileIOHandler method)</a>
 </li>
@@ -413,32 +397,18 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.ShapeMetricsPlotHandler.id">id (wf_psf.plotting.plots_interface.ShapeMetricsPlotHandler attribute)</a>
-</li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.id_name">id_name (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MetricsPlotHandler.ids">ids (wf_psf.plotting.plots_interface.MetricsPlotHandler attribute)</a>
+      <li><a href="wf_psf.psf_models.psf_model_parametric.html#wf_psf.psf_models.psf_model_parametric.TF_PSF_field_model.ids">ids (wf_psf.psf_models.psf_model_parametric.TF_PSF_field_model attribute)</a>
 
       <ul>
-        <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MonochromaticMetricsPlotHandler.ids">(wf_psf.plotting.plots_interface.MonochromaticMetricsPlotHandler attribute)</a>
-</li>
-        <li><a href="wf_psf.psf_models.psf_model_parametric.html#wf_psf.psf_models.psf_model_parametric.TF_PSF_field_model.ids">(wf_psf.psf_models.psf_model_parametric.TF_PSF_field_model attribute)</a>
-</li>
         <li><a href="wf_psf.psf_models.psf_model_semiparametric.html#wf_psf.psf_models.psf_model_semiparametric.TF_SemiParam_field.ids">(wf_psf.psf_models.psf_model_semiparametric.TF_SemiParam_field attribute)</a>
-</li>
-        <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.ids">(wf_psf.utils.configs_handler.MetricsConfigHandler attribute)</a>
-</li>
-        <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler.ids">(wf_psf.utils.configs_handler.PlottingConfigHandler attribute)</a>
-</li>
-        <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.TrainingConfigHandler.ids">(wf_psf.utils.configs_handler.TrainingConfigHandler attribute)</a>
 </li>
       </ul></li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.IndependentZernikeInterpolation">IndependentZernikeInterpolation (class in wf_psf.utils.utils)</a>
 </li>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_poly_Z_field.init_coeff_matrix">init_coeff_matrix() (wf_psf.psf_models.tf_layers.TF_poly_Z_field method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_batch_mono_PSF.init_mono_PSF">init_mono_PSF() (wf_psf.psf_models.tf_layers.TF_batch_mono_PSF method)</a>
 </li>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD.init_vars">init_vars() (wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD method)</a>
@@ -449,6 +419,8 @@
         <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_NP_poly_OPD.init_vars">(wf_psf.psf_models.tf_layers.TF_NP_poly_OPD method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.IndependentZernikeInterpolation.interp_one_zk">interp_one_zk() (wf_psf.utils.utils.IndependentZernikeInterpolation method)</a>
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.interp_SED">interp_SED() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
@@ -477,13 +449,11 @@
 </li>
       <li><a href="wf_psf.training.train_utils.html#wf_psf.training.train_utils.L1ParamScheduler">L1ParamScheduler (class in wf_psf.training.train_utils)</a>
 </li>
-      <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.learning_rate_non_params">learning_rate_non_params (wf_psf.training.train.TrainingParamsHandler property)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.learning_rate_params">learning_rate_params (wf_psf.training.train.TrainingParamsHandler property)</a>
+      <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.learning_rate_non_params">learning_rate_non_params (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler.load_metrics_into_dict">load_metrics_into_dict() (wf_psf.utils.configs_handler.PlottingConfigHandler method)</a>
+      <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.learning_rate_params">learning_rate_params (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.load_multi_cycle_params_click">load_multi_cycle_params_click() (in module wf_psf.utils.utils)</a>
 </li>
@@ -493,19 +463,9 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.run.html#wf_psf.run.mainMethod">mainMethod() (in module wf_psf.run)</a>
-</li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler.make_dict_of_metrics">make_dict_of_metrics() (wf_psf.utils.configs_handler.PlottingConfigHandler method)</a>
-</li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.make_plot">make_plot() (in module wf_psf.plotting.plots_interface)</a>
-</li>
       <li><a href="wf_psf.utils.read_config.html#wf_psf.utils.read_config.RecursiveNamespace.map_entry">map_entry() (wf_psf.utils.read_config.RecursiveNamespace static method)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler">MetricsConfigHandler (class in wf_psf.utils.configs_handler)</a>
-</li>
       <li><a href="wf_psf.metrics.metrics_interface.html#wf_psf.metrics.metrics_interface.MetricsParamsHandler">MetricsParamsHandler (class in wf_psf.metrics.metrics_interface)</a>
-</li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MetricsPlotHandler">MetricsPlotHandler (class in wf_psf.plotting.plots_interface)</a>
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.model_name">model_name (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
@@ -529,8 +489,6 @@
 </li>
         <li><a href="wf_psf.plotting.html#module-wf_psf.plotting">wf_psf.plotting</a>
 </li>
-        <li><a href="wf_psf.plotting.plots_interface.html#module-wf_psf.plotting.plots_interface">wf_psf.plotting.plots_interface</a>
-</li>
         <li><a href="wf_psf.psf_models.html#module-wf_psf.psf_models">wf_psf.psf_models</a>
 </li>
         <li><a href="wf_psf.psf_models.psf_model_parametric.html#module-wf_psf.psf_models.psf_model_parametric">wf_psf.psf_models.psf_model_parametric</a>
@@ -547,8 +505,6 @@
 </li>
         <li><a href="wf_psf.psf_models.zernikes.html#module-wf_psf.psf_models.zernikes">wf_psf.psf_models.zernikes</a>
 </li>
-        <li><a href="wf_psf.run.html#module-wf_psf.run">wf_psf.run</a>
-</li>
         <li><a href="wf_psf.sims.html#module-wf_psf.sims">wf_psf.sims</a>
 </li>
         <li><a href="wf_psf.sims.SimPSFToolkit.html#module-wf_psf.sims.SimPSFToolkit">wf_psf.sims.SimPSFToolkit</a>
@@ -561,8 +517,6 @@
 </li>
         <li><a href="wf_psf.utils.html#module-wf_psf.utils">wf_psf.utils</a>
 </li>
-        <li><a href="wf_psf.utils.configs_handler.html#module-wf_psf.utils.configs_handler">wf_psf.utils.configs_handler</a>
-</li>
         <li><a href="wf_psf.utils.graph_utils.html#module-wf_psf.utils.graph_utils">wf_psf.utils.graph_utils</a>
 </li>
         <li><a href="wf_psf.utils.io.html#module-wf_psf.utils.io">wf_psf.utils.io</a>
@@ -574,8 +528,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MonochromaticMetricsPlotHandler">MonochromaticMetricsPlotHandler (class in wf_psf.plotting.plots_interface)</a>
-</li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.multi_cycle_params">multi_cycle_params (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
   </ul></td>
@@ -626,19 +578,9 @@
 </li>
       <li><a href="wf_psf.utils.graph_utils.html#wf_psf.utils.graph_utils.GraphBuilder.pick_emax">pick_emax() (wf_psf.utils.graph_utils.GraphBuilder method)</a>
 </li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MetricsPlotHandler.plot">plot() (wf_psf.plotting.plots_interface.MetricsPlotHandler method)</a>
-
-      <ul>
-        <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.MonochromaticMetricsPlotHandler.plot">(wf_psf.plotting.plots_interface.MonochromaticMetricsPlotHandler method)</a>
-</li>
-        <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.ShapeMetricsPlotHandler.plot">(wf_psf.plotting.plots_interface.ShapeMetricsPlotHandler method)</a>
-</li>
-      </ul></li>
       <li><a href="wf_psf.metrics.metrics.html#wf_psf.metrics.metrics.plot_function">plot_function() (in module wf_psf.metrics.metrics)</a>
 </li>
       <li><a href="wf_psf.metrics.metrics.html#wf_psf.metrics.metrics.plot_imgs">plot_imgs() (in module wf_psf.metrics.metrics)</a>
-</li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.plot_metrics">plot_metrics() (in module wf_psf.plotting.plots_interface)</a>
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.plot_opd_phase">plot_opd_phase() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
 </li>
@@ -647,8 +589,6 @@
       <li><a href="wf_psf.metrics.metrics.html#wf_psf.metrics.metrics.plot_residual_maps">plot_residual_maps() (in module wf_psf.metrics.metrics)</a>
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.plot_z_coeffs">plot_z_coeffs() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
-</li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler">PlottingConfigHandler (class in wf_psf.utils.configs_handler)</a>
 </li>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD.predict">predict() (wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD method)</a>
 
@@ -720,26 +660,16 @@
 </li>
       <li><a href="wf_psf.utils.read_config.html#wf_psf.utils.read_config.read_yaml">read_yaml() (in module wf_psf.utils.read_config)</a>
 </li>
-      <li><a href="wf_psf.utils.read_config.html#wf_psf.utils.read_config.RecursiveNamespace">RecursiveNamespace (class in wf_psf.utils.read_config)</a>
-</li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.register_configclass">register_configclass() (in module wf_psf.utils.configs_handler)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wf_psf.utils.read_config.html#wf_psf.utils.read_config.RecursiveNamespace">RecursiveNamespace (class in wf_psf.utils.read_config)</a>
+</li>
       <li><a href="wf_psf.psf_models.psf_models.html#wf_psf.psf_models.psf_models.register_psfclass">register_psfclass() (in module wf_psf.psf_models.psf_models)</a>
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.resize">resize() (in module wf_psf.sims.SimPSFToolkit)</a>
 
       <ul>
         <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.resize">(in module wf_psf.utils.utils)</a>
-</li>
-      </ul></li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.run">run() (wf_psf.utils.configs_handler.MetricsConfigHandler method)</a>
-
-      <ul>
-        <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler.run">(wf_psf.utils.configs_handler.PlottingConfigHandler method)</a>
-</li>
-        <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.TrainingConfigHandler.run">(wf_psf.utils.configs_handler.TrainingConfigHandler method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -804,8 +734,6 @@
 </li>
       <li><a href="wf_psf.psf_models.psf_models.html#wf_psf.psf_models.psf_models.set_psf_model">set_psf_model() (in module wf_psf.psf_models.psf_models)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.set_run_config">set_run_config() (in module wf_psf.utils.configs_handler)</a>
-</li>
       <li><a href="wf_psf.psf_models.psf_model_semiparametric.html#wf_psf.psf_models.psf_model_semiparametric.TF_SemiParam_field.set_trainable_layers">set_trainable_layers() (wf_psf.psf_models.psf_model_semiparametric.TF_SemiParam_field method)</a>
 
       <ul>
@@ -824,13 +752,9 @@
         <li><a href="wf_psf.psf_models.tf_psf_field.html#wf_psf.psf_models.tf_psf_field.TF_SemiParam_field.set_zero_nonparam">(wf_psf.psf_models.tf_psf_field.TF_SemiParam_field method)</a>
 </li>
       </ul></li>
-      <li><a href="wf_psf.run.html#wf_psf.run.setProgramOptions">setProgramOptions() (in module wf_psf.run)</a>
-</li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.setup_outputs">setup_outputs() (wf_psf.utils.io.FileIOHandler method)</a>
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.setup_training">setup_training() (in module wf_psf.training.train)</a>
-</li>
-      <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.ShapeMetricsPlotHandler">ShapeMetricsPlotHandler (class in wf_psf.plotting.plots_interface)</a>
 </li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.NoiseEstimator.sigma_mad">sigma_mad() (wf_psf.utils.utils.NoiseEstimator static method)</a>
 </li>
@@ -904,8 +828,6 @@
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.training_hparams">training_hparams (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.TrainingConfigHandler">TrainingConfigHandler (class in wf_psf.utils.configs_handler)</a>
-</li>
       <li><a href="wf_psf.data.training_preprocessing.html#wf_psf.data.training_preprocessing.TrainingDataHandler">TrainingDataHandler (class in wf_psf.data.training_preprocessing)</a>
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler">TrainingParamsHandler (class in wf_psf.training.train)</a>
@@ -963,13 +885,6 @@
 
       <ul>
         <li><a href="wf_psf.plotting.html#module-wf_psf.plotting">module</a>
-</li>
-      </ul></li>
-      <li>
-    wf_psf.plotting.plots_interface
-
-      <ul>
-        <li><a href="wf_psf.plotting.plots_interface.html#module-wf_psf.plotting.plots_interface">module</a>
 </li>
       </ul></li>
       <li>
@@ -1031,13 +946,6 @@
 </li>
       </ul></li>
       <li>
-    wf_psf.run
-
-      <ul>
-        <li><a href="wf_psf.run.html#module-wf_psf.run">module</a>
-</li>
-      </ul></li>
-      <li>
     wf_psf.sims
 
       <ul>
@@ -1077,13 +985,6 @@
 
       <ul>
         <li><a href="wf_psf.utils.html#module-wf_psf.utils">module</a>
-</li>
-      </ul></li>
-      <li>
-    wf_psf.utils.configs_handler
-
-      <ul>
-        <li><a href="wf_psf.utils.configs_handler.html#module-wf_psf.utils.configs_handler">module</a>
 </li>
       </ul></li>
       <li>
