deploy: d36a8bd4a581768a8fc6d7ba81f23e0b281328ab

--- a/configuration.html
+++ b/configuration.html
@@ -300,8 +300,8 @@ metrics:
   # Metrics-only run: Specify model_params for a pre-trained model else leave blank if running training + metrics
   # Specify path to Parent Directory of Trained Model 
   trained_model_path: /path/to/wf-outputs-202310161536
-  # Path to Trained Model Config file inside /trained_model_path/ parent directory
-  trained_model_config: config/training_config.yaml
+  # Name of Trained Model Config file inside /trained_model_path/ parent directory
+  trained_model_config: training_config.yaml
 </pre></div>
 </div>
 <p>The results of the metrics evaluation will be saved in the new output directory created at runtime (not in the pretrained model directory created previously).</p>
